[package]
name = "onlinelimiter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steam-api = "0.4.1"
anyhow = "1.0.79"
chrono = "0.4.33"
winreg = "0.52.0"
windows-service = "0.6.0"
fxtabs = "0.2.0"
winrt-notification = "0.5.1"